syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";
import "common/external_system.proto";
import "common/common.proto";
import "common/billing_type.proto";

option go_package = "api/grpc/v1/service_line_item;service_line_item_grpc_service";


message CreateServiceLineItemGrpcRequest {
  string tenant = 1;
  string loggedInUserId = 2;
  BilledType billed = 3;
  int64 quantity = 4; // Relevant only for Subscription type
  double price = 5;
  string name = 6;
  string contractId = 7;
  SourceFields sourceFields = 8;
  google.protobuf.Timestamp createdAt = 9;
  google.protobuf.Timestamp updatedAt = 10;
  google.protobuf.Timestamp startedAt = 11;
  google.protobuf.Timestamp endedAt = 12;
}

message UpdateServiceLineItemGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string name = 4;
  double price = 5;
  int64 quantity = 6;
  BilledType billed = 7;
  google.protobuf.Timestamp updatedAt = 8;
  SourceFields sourceFields = 9;
  string comments = 10;
  bool isRetroactiveCorrection = 11;
  string contractId = 12;
}

// Permanently delete service line item request
message DeleteServiceLineItemGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string appSource = 4;
}

message CloseServiceLineItemGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string appSource = 4;
  google.protobuf.Timestamp updatedAt = 5;
  google.protobuf.Timestamp endedAt = 6;
}

message ServiceLineItemData {
  string id = 1;
  string tenant = 2;
  string name = 3;
  double price = 4;
  int64 quantity = 5;
  BilledType billed = 6;
  string contractId = 7;
  string comments = 8;
  bool isRetroactiveCorrection = 9;
}

message UpdateServiceLineItemSetGrpcRequest {
  repeated ServiceLineItemData serviceLineItems = 1;
  google.protobuf.Timestamp createdAt = 2;
  google.protobuf.Timestamp updatedAt = 3;
  google.protobuf.Timestamp startedAt = 4;
  google.protobuf.Timestamp endedAt = 5;
  SourceFields sourceFields = 6;
  string tenant = 7;
  string loggedInUserId = 8;
}

// Service line item response message
message ServiceLineItemIdGrpcResponse {
  string id = 1;
}

// Service line item response message
message ServiceLineItemIdSetGrpcResponse {
  repeated string ids = 1;
}

// Service definition
service ServiceLineItemGrpcService {
  rpc CreateServiceLineItem(CreateServiceLineItemGrpcRequest) returns (ServiceLineItemIdGrpcResponse);
  rpc UpdateServiceLineItem(UpdateServiceLineItemGrpcRequest) returns (ServiceLineItemIdGrpcResponse);
  rpc DeleteServiceLineItem(DeleteServiceLineItemGrpcRequest) returns (ServiceLineItemIdGrpcResponse);
  rpc CloseServiceLineItem(CloseServiceLineItemGrpcRequest) returns (ServiceLineItemIdGrpcResponse);
  rpc UpdateServiceLineItemSet(UpdateServiceLineItemSetGrpcRequest) returns (ServiceLineItemIdSetGrpcResponse);
}